# kinexis_support_app

./: .envrc  CLAUDE.md  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
kinexis-support-docs/: Refactor implemented.md  refactored.md  refresh_secrets.py specs.md  refresh_secrets_generated.md  secrets header block.md  usage refresh_secrets.md
kinexis-support-docs/.obsidian/: workspace.json
kinexis_support/: apps.py  services.py  tests.py  urls.py  views.py
kinexis_support/management/commands/: dokku_config_set.py  refresh_config.py  refresh_secrets.py
kinexis_support/scripts/: dokku_config_set.py  dokku_env_export.py  download_openchannel_bootstrap.sh  tst_django_environ.py
kinexis_support/services/secrets_refresh/: __init__.py  cli.py  domain.py  fileio.py  op_client.py  service.py
kinexis_support_app/: asgi.py  settings.py  urls.py  wsgi.py
management/commands/: refresh_secrets.py
test_kinexis_support/: apps.py
